--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 				<div class="col-md-4 col-md-pull-6 animate-box">
 					<div class="gtco-contact-info">
 						<ul>
-							<li class="address">198 West 21th Street, Suite 721 New York NY 10016</li>
 							<li class="phone"><a href="tel://1235235598">+ 1235 2355 98</a></li>
 							<li class="email"><a href="mailto:info@yoursite.com">info@example.com</a></li>
 							<li class="url"><a href="#">http://example.com</a></li>
@@ -154,6 +153,18 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div id="map">
+                
+			<!-- How to change your own map point
+				   1. Go to Google Maps
+				   2. Click on your location point
+				   3. Click "Share" and choose "Embed map" tab
+				   4. Copy only URL and paste it within the src="" field below
+
+				   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3465.8752983012546!2d-53.75737328489317!3d-29.694394882011068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9503cb1373393bcf%3A0xd891ec7f883d37cf!2sSanta%20Tattoo!5e0!3m2!1spt-BR!2sbr!4v1650326325727!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			-->
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13864.844041496623!2d-53.809508!3d-29.6846614!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9503cb1e1acda2b9%3A0x1caf4b88ccae987f!2sSiqueira%20e%20Martins%20Advogados%20Associados!5e0!3m2!1spt-BR!2sbr!4v1661370771798!5m2!1spt-BR!2sbr" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 	</section>
 	
