--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 				<div class="col-md-4 col-md-pull-6 animate-box">
 					<div class="gtco-contact-info">
 						<ul>
-							<li class="phone"><a href="tel://1235235598">+ 1235 2355 98</a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">info@example.com</a></li>
-							<li class="url"><a href="#">http://example.com</a></li>
+							<li class="phone"><a href="tel://55 99950-1396">+ 55 99950-1396</a></li>
+							<li class="email"><a href="mailto:siqueiraemartinsadv@gmail.com">siqueiraemartinsadv@gmail.com</a></li>
+							<li class="icon-instagram"><a href="https://www.instagram.com/siqueiraemartinsadv/">Instagram</a></li>
 						</ul>
 					</div>
 				</div>
@@ -189,6 +189,7 @@
 	</div>
 
 	<div class="gototop js-top">
+	<!--AQUI COLOCAR BOTÃO FIXO DO WHATSAPP-->
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
 	
