--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Nossa Equipe</h1>
-					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Nossa Equipe</p>
+					<h1>Quem Somos</h1>
+					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Quem Somos</p>
 				</div>
 			</div>
 			<div class="row team-item gtco-team-reverse">
@@ -108,9 +107,9 @@
 				</div>
 				<div class="col-md-6  col-md-pull-6 animate-box" data-animate-effect="fadeInRight">
 					<h2>Dr. Bruno Siqueira</h2>
-					<h3>Áreas de atuação</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aliquid maiores, voluptatum ex. Accusantium, eum distinctio laudantium. Perferendis dolor, corporis quasi? Tempore quod molestiae quis cumque pariatur dolore vel sit, fugit delectus quasi reprehenderit officia voluptate incidunt, culpa odit impedit qui dolorum fugiat. Quidem possimus reprehenderit, quae recusandae voluptatibus magnam!</p>
-					<p>Ratione facilis quod laborum eaque illo dolore blanditiis nobis dicta voluptatem fugit optio, eveniet non dolor quia delectus, sint, dignissimos atque porro consequuntur unde. Soluta ex necessitatibus delectus saepe aliquam, culpa officiis doloremque, ipsa facere hic, voluptatem accusantium veniam, quasi! Explicabo accusantium sint, corporis consequuntur fugit ipsam, dolorum excepturi adipisci.</p>
+					<p>Bruno Siqueira é advogado (OAB/RS 111.689), formado em Direito e Pós-Graduado em Direito Processual Civil pela Universidade Franciscana (UFN).</p>
+					<p>Atua no direito civil com ênfase nas áreas de família e sucessões, contratos, responsabilidade civil, e execução de dívidas. É consultor e orientador jurídico de empresas.</p>
+					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados.</p>
 				</div>
 			</div>
 
@@ -122,9 +121,9 @@
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 					<h2>Dr. Amir Martins</h2>
-					<h3>Áreas de atuação</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aliquid maiores, voluptatum ex. Accusantium, eum distinctio laudantium. Perferendis dolor, corporis quasi? Tempore quod molestiae quis cumque pariatur dolore vel sit, fugit delectus quasi reprehenderit officia voluptate incidunt, culpa odit impedit qui dolorum fugiat. Quidem possimus reprehenderit, quae recusandae voluptatibus magnam!</p>
-					<p>Ratione facilis quod laborum eaque illo dolore blanditiis nobis dicta voluptatem fugit optio, eveniet non dolor quia delectus, sint, dignissimos atque porro consequuntur unde. Soluta ex necessitatibus delectus saepe aliquam, culpa officiis doloremque, ipsa facere hic, voluptatem accusantium veniam, quasi! Explicabo accusantium sint, corporis consequuntur fugit ipsam, dolorum excepturi adipisci.</p>
+					<p>Amir Martins é advogado (OAB/RS 116.043), formado em Direito pela Universidade Franciscana (UFN).</p>
+					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados. (2018)</p>
+					<p>Atua na área do direito civil com ênfase nas áreas do direito imobiliário, regularização de imóveis e ações possessórias. Atua também na área da propriedade intelectual, com ênfase no registro de marca, oposição e pedidos de caducidade. É consultor jurídico de empresas.</p>
 				</div>
 			</div>
 
