--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Contato</h1>
-					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contact</p>
+					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contato</p>
 				</div>
 			</div>
 			<div class="row">
@@ -167,24 +166,6 @@
 		</div>
 	</section>
 	
-	<footer id="gtco-footer" role="contentinfo">
-		<div class="container">
-			
-			<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-					</p>
-				</div>
-			</div>
-
-		</div>
-	</footer>
 	</div>
 
 <!--AQUI BOTÃO FIXO DO WHATSAPP-->
