--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 					</div>
 				</div>
 				<div class="col-md-6  col-md-pull-6 animate-box" data-animate-effect="fadeInRight">
-					<h2>Dr. Bruno Siqueira</h2>
-					<p>Bruno Siqueira é advogado (OAB/RS 111.689), formado em Direito e Pós-Graduado em Direito Processual Civil pela Universidade Franciscana (UFN).</p>
-					<p>Atua no direito civil com ênfase nas áreas de família e sucessões, contratos, responsabilidade civil, e execução de dívidas. É consultor e orientador jurídico de empresas.</p>
-					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados.</p>
+					<h2>Amir Martins</h2>
+					<p>Amir Martins é advogado (OAB/RS 116.043), formado em Direito pela Universidade Franciscana (UFN).</p>
+					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados. (2018)</p>
+					<p>Atua na área do direito civil com ênfase nas áreas do direito imobiliário, regularização de imóveis e ações possessórias. Atua também na área da propriedade intelectual, com ênfase no registro de marca, oposição e pedidos de caducidade. É consultor jurídico de empresas.</p>
 				</div>
 			</div>
 
@@ -120,10 +120,10 @@
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-					<h2>Dr. Amir Martins</h2>
-					<p>Amir Martins é advogado (OAB/RS 116.043), formado em Direito pela Universidade Franciscana (UFN).</p>
-					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados. (2018)</p>
-					<p>Atua na área do direito civil com ênfase nas áreas do direito imobiliário, regularização de imóveis e ações possessórias. Atua também na área da propriedade intelectual, com ênfase no registro de marca, oposição e pedidos de caducidade. É consultor jurídico de empresas.</p>
+					<h2>Bruno Siqueira</h2>
+					<p>Bruno Siqueira é advogado (OAB/RS 111.689), formado em Direito e Pós-Graduado em Direito Processual Civil pela Universidade Franciscana (UFN).</p>
+					<p>Atua no direito civil com ênfase nas áreas de família e sucessões, contratos, responsabilidade civil, e execução de dívidas. É consultor e orientador jurídico de empresas.</p>
+					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados.</p>
 				</div>
 			</div>
 
