--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
 					<div id="gtco-logo"></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
+					<div class="logo-cab">
+						
+					</div>
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
+						<li><img src="./images/Logo_ SIQUEIRA E MARTINS 003.png" alt="" style="width: 200px; position: fixed;left: 10px; top: 5px;"></li>
 						<li><a href="#" data-nav-section="our-team">Nossa Equipe</a></li>
 						<li class="btn-cta"><a href="#" data-nav-section="contact"><span>Contato</span></a></li>
 						<!-- For external page link -->
@@ -75,8 +78,7 @@
 		</div>
 	</nav>
 
-	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/img_bg_4.jpg);"  data-section="home"  data-stellar-background-ratio="1.2">
-		<!-- <div class="overlay"></div>
+<!--	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/img_bg_4.jpg);"  data-section="home"  data-stellar-background-ratio="0.7">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 text-center">
@@ -88,17 +90,17 @@
 					</div>  
 				</div>
 			</div>
-		</div> -->
-	</section>
+		</div> 
+	</section>  --> 
 
 	<section id="gtco-our-team" data-section="our-team">
 		<div class="container">
-			<div class="row row-pb-md">
+		<!--	<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Quem Somos</h1>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Quem Somos</p>
 				</div>
-			</div>
+			</div>  -->
 			<div class="row team-item gtco-team-reverse">
 				<div class="col-md-6 col-md-push-7 animate-box" data-animate-effect="fadeInRight">
 					<div class="img-shadow">
@@ -106,7 +108,7 @@
 					</div>
 				</div>
 				<div class="col-md-6  col-md-pull-6 animate-box" data-animate-effect="fadeInRight">
-					<h2>Amir Martins</h2>
+					<h2>Dr. Amir Martins</h2>
 					<p>Amir Martins é advogado (OAB/RS 116.043), formado em Direito pela Universidade Franciscana (UFN).</p>
 					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados. (2018)</p>
 					<p>Atua na área do direito civil com ênfase nas áreas do direito imobiliário, regularização de imóveis e ações possessórias. Atua também na área da propriedade intelectual, com ênfase no registro de marca, oposição e pedidos de caducidade. É consultor jurídico de empresas.</p>
@@ -121,7 +123,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-					<h2>Bruno Siqueira</h2>
+					<h2>Dr. Bruno Siqueira</h2>
 					<p>Bruno Siqueira é advogado (OAB/RS 111.689), formado em Direito e Pós-Graduado em Direito Processual Civil pela Universidade Franciscana (UFN).</p>
 					<p>Atua no direito civil com ênfase nas áreas de família e sucessões, contratos, responsabilidade civil, e execução de dívidas. É consultor e orientador jurídico de empresas.</p>
 					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados.</p>
