--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<p>Bruno Siqueira é advogado (OAB/RS 111.689), formado em Direito e Pós-Graduado em Direito Processual Civil pela Universidade Franciscana (UFN).</p>
 					<p>Atua no direito civil com ênfase nas áreas de família e sucessões, contratos, responsabilidade civil, e execução de dívidas. É consultor e orientador jurídico de empresas.</p>
 					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados.</p>
-					<p><a href="https://wa.me/5555999501396" style="color:#34af23; font-weight: bolder; font-size:larger;">Converse Comigo!</a></p>	
+					<p><a href="https://wa.me/5555999501396" style="background-color:#34af23; color: white; padding: 10px; border-radius: 15px; font-weight: bolder; font-size:larger;">Converse Comigo!</a></p>	
 				</div>
 			</div>
 
@@ -127,7 +127,7 @@
 					<p>Amir Martins é advogado (OAB/RS 116.043), formado em Direito pela Universidade Franciscana (UFN).</p>
 					<p>É sócio fundador do escritório Siqueira & Martins Advogados Associados. (2018)</p>
 					<p>Atua na área do direito civil com ênfase nas áreas do direito imobiliário, regularização de imóveis e ações possessórias. Atua também na área da propriedade intelectual, com ênfase no registro de marca, oposição e pedidos de caducidade. É consultor jurídico de empresas.</p>
-					<p><a href="https://wa.me/5555999501396" style="color:#34af23; font-weight: bolder; font-size:larger;">Converse Comigo!</a></p>
+					<p><a href="https://wa.me/5555999501396" style="background-color:#34af23; color: white; padding: 10px; border-radius: 15px; font-weight: bolder; font-size:larger;">Converse Comigo!</a></p>
 					</div>
 			</div>
 
