--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 					</div>
 					<ul>
 						<li><img src="./images/Logo_ SIQUEIRA E MARTINS 003.png" alt="" style="width: 200px; position: fixed;left: 10px; top: 5px;"></li>
+						<li style="visibility: hidden;">config</li>
 						<li><a href="#" data-nav-section="our-team">Nossa Equipe</a></li>
 						<li class="btn-cta"><a href="#" data-nav-section="contact"><span>Contato</span></a></li>
 						<!-- For external page link -->
